input section done

--- a/index.html
+++ b/index.html
@@ -165,6 +165,29 @@
           </div>
        </div>
         </section>
+
+        <section class=" container mx-auto bg:[url('../assets/bg.jpg')] text-center">
+            <div class="space-y-3">
+                <i class="fa-solid fa-arrow-right"></i>
+            <button>How We Work</button>
+            <div>
+
+            <div class="space-y-3">
+                <h2 class="text-4xl font-bold">Our Work Process</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eius tenetur, animi esse dolore eligendi iusto minima facere nostrum delectus.</p>
+            </div>
+
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-3">
+                <input class="rounded-2xl p-2" type="text" placeholder="First Name*">
+                <input class="rounded-2xl p-2" type="text" placeholder="Last Name*">
+                <input class="rounded-2xl p-2" type="text" placeholder="Phone Number*">
+                <input class="rounded-2xl p-2" type="text" placeholder="Email Number*">
+                <textarea rows="5" class="lg:col-span-2 rounded-2xl p-2" name="" placeholder="Write your message here"></textarea>
+                <button class="bg-slate-500 grid grid-cols-1 lg:col-span-2 gap-3 rounded-2xl p-2">Send Mail</button>    
+            </div>
+            
+
+        </section>
     </main>
 
      <footer>
